; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_md.c_mbedtls_md_file.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_md.c_mbedtls_md_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32 (i32, i8*)*, i32 (i32, i8*, i64)*, i32 (i32)* }
%struct.TYPE_9__ = type { i32 }

@MBEDTLS_ERR_MD_BAD_INPUT_DATA = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"rb\00", align 1
@MBEDTLS_ERR_MD_FILE_IO_ERROR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mbedtls_md_file(%struct.TYPE_8__* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_8__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i64, align 8
  %11 = alloca %struct.TYPE_9__, align 4
  %12 = alloca [1024 x i8], align 16
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %13 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %14 = icmp eq %struct.TYPE_8__* %13, null
  br i1 %14, label %15, label %17

15:                                               ; preds = %3
  %16 = load i32, i32* @MBEDTLS_ERR_MD_BAD_INPUT_DATA, align 4
  store i32 %16, i32* %4, align 4
  br label %69

17:                                               ; preds = %3
  %18 = load i8*, i8** %6, align 8
  %19 = call i32* @fopen(i8* %18, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  store i32* %19, i32** %9, align 8
  %20 = icmp eq i32* %19, null
  br i1 %20, label %21, label %23

21:                                               ; preds = %17
  %22 = load i32, i32* @MBEDTLS_ERR_MD_FILE_IO_ERROR, align 4
  store i32 %22, i32* %4, align 4
  br label %69

23:                                               ; preds = %17
  %24 = call i32 @mbedtls_md_init(%struct.TYPE_9__* %11)
  %25 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %26 = call i32 @mbedtls_md_setup(%struct.TYPE_9__* %11, %struct.TYPE_8__* %25, i32 0)
  store i32 %26, i32* %8, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %29

28:                                               ; preds = %23
  br label %64

29:                                               ; preds = %23
  %30 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %31 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %30, i32 0, i32 2
  %32 = load i32 (i32)*, i32 (i32)** %31, align 8
  %33 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %11, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  %35 = call i32 %32(i32 %34)
  br label %36

36:                                               ; preds = %41, %29
  %37 = getelementptr inbounds [1024 x i8], [1024 x i8]* %12, i64 0, i64 0
  %38 = load i32*, i32** %9, align 8
  %39 = call i64 @fread(i8* %37, i32 1, i32 1024, i32* %38)
  store i64 %39, i64* %10, align 8
  %40 = icmp ugt i64 %39, 0
  br i1 %40, label %41, label %50

41:                                               ; preds = %36
  %42 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %43 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %42, i32 0, i32 1
  %44 = load i32 (i32, i8*, i64)*, i32 (i32, i8*, i64)** %43, align 8
  %45 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %11, i32 0, i32 0
  %46 = load i32, i32* %45, align 4
  %47 = getelementptr inbounds [1024 x i8], [1024 x i8]* %12, i64 0, i64 0
  %48 = load i64, i64* %10, align 8
  %49 = call i32 %44(i32 %46, i8* %47, i64 %48)
  br label %36

50:                                               ; preds = %36
  %51 = load i32*, i32** %9, align 8
  %52 = call i64 @ferror(i32* %51)
  %53 = icmp ne i64 %52, 0
  br i1 %53, label %54, label %56

54:                                               ; preds = %50
  %55 = load i32, i32* @MBEDTLS_ERR_MD_FILE_IO_ERROR, align 4
  store i32 %55, i32* %8, align 4
  br label %64

56:                                               ; preds = %50
  %57 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %58 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %57, i32 0, i32 0
  %59 = load i32 (i32, i8*)*, i32 (i32, i8*)** %58, align 8
  %60 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %11, i32 0, i32 0
  %61 = load i32, i32* %60, align 4
  %62 = load i8*, i8** %7, align 8
  %63 = call i32 %59(i32 %61, i8* %62)
  br label %64

64:                                               ; preds = %56, %54, %28
  %65 = load i32*, i32** %9, align 8
  %66 = call i32 @fclose(i32* %65)
  %67 = call i32 @mbedtls_md_free(%struct.TYPE_9__* %11)
  %68 = load i32, i32* %8, align 4
  store i32 %68, i32* %4, align 4
  br label %69

69:                                               ; preds = %64, %21, %15
  %70 = load i32, i32* %4, align 4
  ret i32 %70
}

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @mbedtls_md_init(%struct.TYPE_9__*) #1

declare dso_local i32 @mbedtls_md_setup(%struct.TYPE_9__*, %struct.TYPE_8__*, i32) #1

declare dso_local i64 @fread(i8*, i32, i32, i32*) #1

declare dso_local i64 @ferror(i32*) #1

declare dso_local i32 @fclose(i32*) #1

declare dso_local i32 @mbedtls_md_free(%struct.TYPE_9__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
